--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URI= mongodb+srv://dcastillom1:diego1@cluster0.dz9koit.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGO_DB=proyecto_bigData
-MONGO_COLECCION=usuario_roles
+MONGO_DB = proyecto_bigData
+MONGO_COLECCION = usuario_roles
 ELASTIC_CLOUD_URL = https://my-elasticsearch-project-e23a1e.es.us-central1.gcp.elastic.cloud:443
 ELASTIC_API_KEY = REs2Nmlab0JqNi00YkhvbnVmMmk6b0hkbkdoSnBuNWRtLVdkeTNGUXRqZw==
-SECRET_KEY= diegokas12345
+SECRET_KEY = diegokas12345
